--- a/Chalkable.Web/assets/jade/controls/button.jade
+++ b/Chalkable.Web/assets/jade/controls/button.jade
@@ -1,6 +1,7 @@
 mixin Button()
     value = attributes.value;
     type = attributes.type;
+    -delete attributes.type;
     name = attributes.name;
     attributes = self.processAttrs(attributes);
     isDisabled = (attributes.disabled===true ? "disabled" : undefined);
