--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -19,7 +19,10 @@ each attachment, i in attachments
 
 each app, i in applications
     viewUrl = self.isGradable() && !self.needDeleteButton ? app.getGradingViewUrl() : app.getViewUrl()
-    +ActionLink('apps', 'viewApp', [app.getAnnouncementApplicationId().valueOf(), viewUrl]).announcement-item.application
-        +LoadingImage(src=self.getPictureURL(app.getSmallPictureId(), 74, 74), id="loading-image-" + i)
-        .title
-            div=app.getName()
+    div.announcement-item.application
+        if self.needDeleteButton
+            +ActionLink('announcement', 'deleteApp', app.getAnnouncementApplicationId().valueOf()).close-btn
+        +ActionLink('apps', 'viewApp', [viewUrl, app.getAnnouncementApplicationId().valueOf()])
+            +LoadingImage(src=self.getPictureURL(app.getSmallPictureId(), 74, 74), id="loading-image-" + i)
+            .title
+                div=app.getName()
