--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -16,7 +16,7 @@
         if isNotStudent
             .grades
         .bullet
-            +ActionLink('announcement', 'star', self.getId()).star
+            +ActionLink('announcement', 'star', [self.getId().valueOf(), !self.isStarred()]).star
             .item-type
                 .attachment
                     div(class="announcement-type-" + self.getAnnouncementTypeId()).icon.blue.icon
