--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -23,6 +23,42 @@ $star-size: 18px;
       float: right;
     }
   }
+  .action-bar{
+    .container{
+      .i-b{
+        .pr, .unpr{
+          overflow: hidden;
+          width: 188px;
+          height: 31px;
+          margin-left: 20px;
+          span{
+            text-shadow: none;
+            font: normal 11px arial,tahoma,verdana,helvetica;
+            font-weight: bold;
+            color: #ffff00;
+            width: 20px;
+            display: inline-block;
+            text-align: center;
+          }
+        }
+        .pr{
+          background: url(images/feed/rocket-sprite.png) 0px 0px no-repeat;
+          span{
+            margin-left: 27px;
+          }
+        }
+        .unpr{
+          background: url(images/feed/rocket-sprite.png) 0px -31px no-repeat;
+          span{
+            margin-left: 34px;
+          }
+        }
+      }
+    }
+  }
+
+
+
 }
 
 .feed-item {
