--- a/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
@@ -2,12 +2,12 @@
     .action-bar.not-transparent.buttons
         .container.panel-bg
             .left
-                +ActionLink('message', 'sendPage', [])#new-message-link
+                +ActionLink('message', 'sendPage')#new-message-link
                     span New message
 
             .right
-                +ActionLink('message', 'page', [true, true, self.getRole(), self.getKeyword()])(class=self.isInbox() ? "pressed" : "") Inbox
-                +ActionLink('message', 'page', [true, false, self.getRole(), self.getKeyword()])(class=self.isInbox() ? "" : "pressed") Sent
+                +ActionLink('message', 'page', true, true, self.getRole(), self.getKeyword())(class=self.isInbox() ? "pressed" : "") Inbox
+                +ActionLink('message', 'page', true, false, self.getRole(), self.getKeyword())(class=self.isInbox() ? "" : "pressed") Sent
                 input(name="role", type="hidden", value=self.getRole())
                 input(name="inbox", type="hidden", value=self.isInbox())
                 input(name="keyword", type="text", value=self.getKeyword())#keyword
@@ -29,11 +29,11 @@
                                 +Button()(type="submit", name="submitType", value="markAsUnread").plain-button.action-button#mark-unread-button Unread
                         .right
                             |View:
-                            +ActionLink('message', 'page', [true, self.isInbox(), '', self.getKeyword()]) All
-                            +ActionLink('message', 'page', [true, self.isInbox(), 'parent', self.getKeyword()]) Parent
-                            +ActionLink('message', 'page', [true, self.isInbox(), 'student', self.getKeyword()]) Student
-                            +ActionLink('message', 'page', [true, self.isInbox(), 'teacher', self.getKeyword()]) Teacher
-                            +ActionLink('message', 'page', [true, self.isInbox(), 'admingrade,adminedit,adminview', self.getKeyword()]) Admin
+                            +ActionLink('message', 'page', true, self.isInbox(), '', self.getKeyword()) All
+                            +ActionLink('message', 'page', true, self.isInbox(), 'parent', self.getKeyword()) Parent
+                            +ActionLink('message', 'page', true, self.isInbox(), 'student', self.getKeyword()) Student
+                            +ActionLink('message', 'page', true, self.isInbox(), 'teacher', self.getKeyword()) Teacher
+                            +ActionLink('message', 'page', true, self.isInbox(), 'admingrade,adminedit,adminview', self.getKeyword()) Admin
                 each item in self.getMessages().getItems()
                     +GridRow()
                         .read
@@ -47,7 +47,7 @@
                                         +PersonImg(item.getRecipient(), 47)
 
                             .item
-                                +ActionLink('message', 'viewPage', item.getId().valueOf())
+                                +ActionLink('message', 'viewPage', item.getId())
                                     h2
                                         if self.isInbox()
                                             =item.getSender().getFirstName() + " " + item.getSender().getLastName()
