--- a/Chalkable.Web/assets/jade/activities/setup/Start.jade
+++ b/Chalkable.Web/assets/jade/activities/setup/Start.jade
@@ -5,7 +5,7 @@
             .left
                 -action = (self.getType() > 0 ? 'teacherSettings' : 'video');
                 -params = (self.getType() > 0 ? [self.getType() - 1] : []);
-                +ActionLink('setup', action, params)=Msg.Go_Back
+                +ActionLinkWithPrepend('setup', action, params)=Msg.Go_Back
             .right
                 +ActionLink('feed', 'list')=Msg.Done
     .blue-arrow.right-up-arrow=Msg.Click.toLowerCase()
