--- a/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-general-info.jade
@@ -10,9 +10,9 @@
                 if self.isAppLive()
                     liveAppId = self.liveAppId ? self.liveAppId.valueOf() : null
                     if self.isApproved()
-                        +ActionLinkButton('apps', 'goLive', self.draftAppId.valueOf()).special-button.blue-button Live
+                        +ActionLinkButton('apps', 'goLive', self.draftAppId).special-button.blue-button Live
                     else
                         +ActionLinkButton('apps', 'unlist', liveAppId).special-button.blue-button Unlist
                 else
                     if self.isApproved()
-                        +ActionLinkButton('apps', 'goLive', self.draftAppId.valueOf()).special-button.blue-button Live
+                        +ActionLinkButton('apps', 'goLive', self.draftAppId).special-button.blue-button Live
