--- a/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
+++ b/Chalkable.Web/assets/jade/activities/people/UsersForGrid.jade
@@ -1,7 +1,7 @@
 each item, i in self.getItems()
     -index = item.getIndex ? (item.getIndex() || i) : i;;
     .row(class=(index == 0 ? 'selected' : ''), index=index)
-        +ActionLink('user', 'infoByRole', [item.getId().valueOf(), item.getRole().getName()]).left.image-container.white.shadow
+        +ActionLink('user', 'infoByRole', item.getId().valueOf(), item.getRole().getName()).left.image-container.white.shadow
             +PersonImg(item, 47)
         p.left= item.getFullName()
         .right
