--- a/Chalkable.Web/assets/jade/activities/settings/admin-settings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/admin-settings.jade
@@ -3,7 +3,7 @@
         //todo Schedule , AttendanceStyle, Apps pages
         +ActionLink('settings', 'generalAdmin').pressed General
         +ActionLink('attendance', 'attendanceStyleList') Attendance Style
-        +ActionLink('disciplinetype', 'list', []) Discipline Type
+        +ActionLink('disciplinetype', 'list') Discipline Type
         +ActionLink('schedule', 'list') Schedule
         +ActionLink('fund', 'info') Apps
     .right
