--- a/Chalkable.Web/assets/jade/controls/paginator.jade
+++ b/Chalkable.Web/assets/jade/controls/paginator.jade
@@ -3,8 +3,8 @@ mixin Paginator(controller, action, data, params)
     pagingData = self.preparePaginationData(data, params)
     .paginator-container
         .left-container
-            +ActionLink(controller, action, params, 0)(class = 'first-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
-            +ActionLink(controller, action, params, pagingData.prevPageStart)(class =  'prev-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
+            +ActionLinkWithPrepend(controller, action, params, 0)(class = 'first-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
+            +ActionLinkWithPrepend(controller, action, params, pagingData.prevPageStart)(class =  'prev-page' + (pagingData.hasPreviousPage ? '' : ' disabled'))
             .info-container
                 form
                     label(for='current_page') Page
@@ -14,8 +14,8 @@ mixin Paginator(controller, action, data, params)
                     input(type="submit")
                     input(type="hidden", name="controller", value=controller).controller-name
                     input(type="hidden", name="action", value=action).action-name
-            +ActionLink(controller, action, params, pagingData.nextPageStart)(class = 'next-page' + (pagingData.hasNextPage ? '' : ' disabled'))
-            +ActionLink(controller, action, params, pagingData.lastPageStart)(class = 'last-page' + (pagingData.hasNextPage ? '' : ' disabled'))
+            +ActionLinkWithPrepend(controller, action, params, pagingData.nextPageStart)(class = 'next-page' + (pagingData.hasNextPage ? '' : ' disabled'))
+            +ActionLinkWithPrepend(controller, action, params, pagingData.lastPageStart)(class = 'last-page' + (pagingData.hasNextPage ? '' : ' disabled'))
         .right-container
             SPAN
                 |Displaying #{pagingData.startText} - #{pagingData.end} of #{pagingData.totalCount}
