--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -30,15 +30,22 @@ $star-size: 18px;
           overflow: hidden;
           width: 188px;
           height: 31px;
-          margin-left: 20px;
+          margin-left: 5px;
+          color: #ffffff;
+          &:hover{
+            color: #ffff00;
+          }
+
           span{
             text-shadow: none;
             font: normal 11px arial,tahoma,verdana,helvetica;
             font-weight: bold;
-            color: #ffff00;
+
             width: 20px;
             display: inline-block;
             text-align: center;
+            margin-bottom: 6px;
+            vertical-align: middle;
           }
         }
         .pr{
